--- a/poatransportes-scala/.classpath
+++ b/poatransportes-scala/.classpath
@@ -40,5 +40,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/postgresql-9.4.1208.jre7.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
