--- a/poatransportes-scala/pom.xml
+++ b/poatransportes-scala/pom.xml
@@ -93,6 +93,11 @@ under the License.
 			<artifactId>flink-ml_2.10</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-jdbc</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
