--- a/poatransportes-scala/.settings/org.scala-ide.sdt.core.prefs
+++ b/poatransportes-scala/.settings/org.scala-ide.sdt.core.prefs
@@ -2,6 +2,7 @@
 //src/main/resources=main
 //src/main/scala=main
 P=
+Xcheck-null=false
 Xcheckinit=false
 Xdisable-assertions=false
 Xelide-below=-2147483648
@@ -13,14 +14,23 @@ Xno-uescape=false
 Xplugin=
 Xplugin-disable=
 Xplugin-require=
-Xpluginsdir=misc/scala-devel/plugins
+Xpluginsdir=
+Ybuild-manager-debug=false
+Yno-generic-signatures=false
+Yno-imports=false
 Ypresentation-debug=false
 Ypresentation-delay=0
 Ypresentation-log=
 Ypresentation-replay=
 Ypresentation-verbose=false
+Yrecursion=0
+Yself-in-annots=false
+Ystruct-dispatch=poly-cache
+Ywarn-dead-code=false
 apiDiff=false
+buildmanager=sbt
 compileorder=Mixed
+debugIncremental=false
 deprecation=false
 eclipse.preferences.version=1
 explaintypes=false
@@ -32,13 +42,13 @@ nowarn=false
 optimise=false
 recompileOnMacroDef=true
 relationsDebug=false
-scala.compiler.additionalParams=\ -Xsource\:2.10 -Ymacro-expand\:none
+scala.compiler.additionalParams=
 scala.compiler.installation=-417589302
 scala.compiler.sourceLevel=2.10
 scala.compiler.useProjectSettings=true
-stopBuildOnError=true
+stopBuildOnError=false
 target=jvm-1.6
 unchecked=false
 useScopesCompiler=true
 verbose=false
-withVersionClasspathValidator=true
+withVersionClasspathValidator=false
